simplified and optimized code